Thêm các tính năng UC05-09